fix broken text vertical align

--- a/app/components/common/paperItem/mobileAuthors.scss
+++ b/app/components/common/paperItem/mobileAuthors.scss
@@ -36,7 +36,7 @@
   .rightBox {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 12px;
   }
 }
 
